stateDiagram-v2
    [*] --> holding: order paid, money held

    holding --> released: order delivered
    holding --> refunded: order cancelled or refunded
    holding --> cancelled: payment window expired

    released --> [*]
    refunded --> [*]
    cancelled --> [*]

    note left of holding
        The escrow_hold balance must ALWAYS
        match the real bank account.
        A reconciliation job checks it hourly.
    end note

    note right of released
        TERMINAL state. No way back.
        To reverse it, post an opposite
        transaction; never edit the old row.
    end note